# project

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_REPORT.md  IMPLEMENTATION_SUMMARY.md  MVP-STATUS.md  NEXT-PHASE-PLAN.md  PHASE2-COMPLETION.md  PHASE_8-12_IMPLEMENTATION_REPORT.md  README.md  SPRINT-IMPLEMENTATION-STATUS.md  SPRINT1-COMPLETE.md  USER_GUIDE.md  WEBSOCKET_FIX.md  claude.md  package.json
.github/workflows/: ci.yml
.specify/templates/: feature-design-template.md  interaction-design-template.md  scenario-planning-template.md  user-story-template.md
backend/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
backend/migrations/: 002_create_agent_work_status.sql  003_create_decision_records.sql  004_create_agent_error_records.sql  006_create_preview_data.sql  008_create_user_interaction_metrics.sql
backend/prisma/: schema.prisma
docs/: API.md  PHASE8-9-IMPLEMENTATION.md  TESTING_AND_DEPLOYMENT.md
frontend/: .env.example  .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
langgraph-server/: .env.example  DEPLOYMENT_SUMMARY.md  INTEGRATION_GUIDE.md  LANGSMITH_SETUP.md  README.md  langgraph.json  pyproject.toml  requirements.txt  start-server.sh  test-agent.py  test-integration.py  verify-installation.sh
langgraph-server/src/: __init__.py
langgraph-server/src/agents/: __init__.py  builder_agent.py  database_agent.py  ui_agent.py
langgraph-server/src/storage/: __init__.py  database.py  session_store.py
langgraph-server/src/utils/: tracing.py
(+286 files in other folders)
